2007-03-04  Aaron Stone <aaron@serendipity.cx>

	* misc.c, check_dbmail_misc.c:
	More work on mailbox_remove_namespace to handle search patterns and
	missing usernames when in the #Users namespace.

2007-03-02  Aaron Stone <aaron@serendipity.cx>

	* dbmail-message.c:
	Handle read and write errors from incoming message stream and its tmp
	file during the filter process (closes bug #511).
	* server.c:
	Accepted Bernard Johnson's umask patch (closes bug #516).
	* misc.c, check_dbmail_misc.c:
	More work on mailbox_remove_namespace to handle search patterns and
	missing usernames when in the #Users namespace.

2007-03-01  Paul J Stevens <paul@nfg.nl>

	* dbmail-user.c, user.c:
	revert changes at aarons request
	* debian/changelog, debian/dbmail.templates, debian/po/cs.po, 
	  debian/po/de.po, debian/po/es.po, debian/po/fr.po, debian/po/gl.po, 
	  debian/po/it.po, debian/po/ja.po, debian/po/ml.po, debian/po/nl.po, 
	  debian/po/pt.po, debian/po/pt_BR.po, debian/po/ru.po, 
	  debian/po/ta.po, debian/po/templates.pot:
	updates by Chistian Pellier
	* misc.c:
	fix mailbox_remove_namespace to work with search patterns
	* db.c, imapcommands.c:
	misc fixes
	* Makefile.in, aclocal.m4, configure, man/Makefile.in, modules/Makefile.in:
	regenerate autoconf files

2007-02-28  Paul J Stevens <paul@nfg.nl>

	* debian/dbmail-mysql.postinst, debian/dbmail-pgsql.postinst:
	remove configure code from postinst, leaving the driver alone
	* debian/dbmail.templates, debian/po/cs.po, debian/po/de.po, 
	  debian/po/es.po, debian/po/fr.po, debian/po/gl.po, debian/po/it.po, 
	  debian/po/ja.po, debian/po/nl.po, debian/po/pt_BR.po, 
	  debian/po/ru.po, debian/po/templates.pot:
	i10n updates
	* ChangeLog, dbmail-user.c, user.c:
	adapt aarons ui patch
	* imap4.c:
	avoid an errno race
	* dbmail-user.c:
	remove spurious output
	* Makefile.in, aclocal.m4, configure, man/Makefile.in:
	rebuild autoconf tools

2007-02-27  Aaron Stone  <aaron@serendipity.cx>

	* user.c, dbmail-user.c: